[project]
name = "ml-arena"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beartype>=0.20.0",
    "ipykernel>=6.29.5",
    "jaxtyping>=0.2.38",
    "loguru>=0.7.3",
    "numpy>=2.2.3",
    "openskill>=6.0.2",
    "scikit-learn>=1.6.1",
    "tqdm>=4.67.1",
    "ucimlrepo>=0.0.7",
]
